<resources>
    <string name="app_name">PopFilm</string>
    <string name="logo_description">App logo</string>
    <string name="login_Google">Google login</string>
    <string name="login_Facebook">Facebook login</string>
    <string name="login_Email">Log in with e-mail</string>
    <string name="login_signup">Sign me up!</string>
    <string name="login_ignore">Log in later</string>
    <string name="under_construction">Under construction</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    <string name="login">Log in</string>
    <string name="reset_password">Reset password</string>
    <string name="field_required">field required</string>
    <string name="login_success">Login successful</string>
    <string name="signup">Sign Up</string>
    <string name="closing_overlay_button">Closing overlay button</string>
    <string name="label_name">Name</string>
    <string name="label_phone">Phone number</string>
    <string name="form_acceptance">I accept the use terms and conditions</string>
    <string name="login_signup_form">Sign up</string>
    <string name="signup_success">Signed up successfully. Welcome</string>
    <string name="tos_not_accepted">Please read and accept our terms of use</string>
    <string name="description_man_with_question_mark">Man with a question mark</string>
    <string name="login_lost_password_title">Did you lose your password?</string>
    <string name="login_lost_password_instructions">No worries. Type in your e-mail and we\'ll send you a new one.</string>
    <string name="submit">submit</string>
    <string name="lost_password_success">Password sent. check your e-mail</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum dignissim erat non faucibus. Nunc vel lorem vulputate, egestas lectus eu, mattis nunc. Nullam pharetra tellus ut sollicitudin hendrerit. In ultrices libero vulputate arcu tincidunt, a blandit nunc facilisis. Donec neque purus, pharetra vitae eleifend et, semper nec ipsum. Nullam felis purus, tincidunt ut scelerisque et, semper porta turpis. Curabitur eleifend efficitur mollis. Suspendisse id leo libero. Donec risus diam, aliquet id sagittis a, ultricies eu ipsum. Vivamus vestibulum leo sed tellus dapibus porta. Sed mattis malesuada lorem, at pharetra massa tincidunt sit amet. Suspendisse commodo ipsum eget orci tincidunt sagittis. In in volutpat lorem. Fusce eu mollis lacus. Proin euismod, libero a efficitur accumsan, justo erat venenatis arcu, eget dapibus ante felis elementum quam.</string>


    //Acesso Api Youtube

    <!-- MainActivity -->
    <string name="channel_name">
        Vinícius Thiengo
    </string>
    <string name="channel_desc">
        Seu canal sobre Desenvolvimento de Aplicativos
        Android e TI.
    </string>
    <string name="youtube_content_icon_content_desc">
        Ícone do YouTube.
    </string>
    <string name="channel_thumb_content_desc">
        Thumb do canal YouTube Vinícius Thiengo.
    </string>
    <string name="channel_toast_alert">
        É preciso ter o aplicativo do YouTube instalado
        para acessar o canal.
    </string>


    <!-- Menu -->
    <string name="item_menu_last_video">
        Vídeo
    </string>
    <string name="item_menu_social_networks">
        Redes
    </string>
    <string name="item_menu_play_lists">
        Play Lists
    </string>
    <string name="item_menu_exclusive_groups">
        Grupos
    </string>
    <string name="item_menu_about_channel">
        Sobre
    </string>
    <string name="item_menu_books">
        Livros T.I.
    </string>
    <string name="item_menu_courses">
        Cursos T.I.
    </string>
    <string name="item_menu_business">
        Business
    </string>


    <!-- LastVideoFragment -->
    <string name="last_video_content_title">
        Último vídeo liberado
    </string>
    <string name="last_video_play_content_desc">
        Ícone de play do vídeo.
    </string>
    <string name="volume_icon_content_desc">
        Ícone de controle volume.
    </string>
    <string name="head_phones_icon_content_desc">
        Ícone de fones de ouvido.
    </string>
    <string name="video_resolution_icon_content_desc">
        Ícone de controle de resolução (HD).
    </string>
    <string name="like_icon_content_desc">
        Ícone de like, gostei do conteúdo.
    </string>
    <string name="touch_to_watch">
        Toque para assistir
    </string>
    <string name="leave_a_comment">
        Deixe seu comentário
    </string>
    <string name="last_video_toast_alert">
        É preciso ou o aplicativo do YouTube ou um navegador
        Web para que o vídeo \"%s\" comece.
    </string>


    <!-- SocialNetworksFragment -->
    <string name="social_networks_content_title">
        Todas as redes do canal com conteúdos exclusivos
    </string>
    <string name="social_network_toast_alert">
        É preciso ao menos um aplicativo de navegador Web
        para você poder acessar a rede \"%s\" do canal.
    </string>


    <!-- PlayListsFragment -->
    <string name="playlists_content_title">
        PlayLists do canal
    </string>
    <string name="playlist_toast_alert">
        É preciso ou o aplicativo do YouTube ou um navegador
        Web para que a PlayList \"%s\" seja acessada.
    </string>
    <string name="no_playlists_yet">
        Nenhuma PlayList disponível no canal!
    </string>


    <!-- GroupsFragment -->
    <string name="groups_content_title">
        Grupos exclusivos do canal
    </string>
    <string name="groups_desc">A
        seguir todos os grupos exclusivos do canal que você
        pode fazer parte. Estamos esperando por você também
        nas nossas comunidades exclusivas.
    </string>
    <string name="groups_toast_alert">
        É preciso o aplicativo do \"%s\" para abrir o grupo
        exclusivo \"%s\".
    </string>


    <!-- AboutChannelFragment -->
    <string name="about_channel_content_title">
        Conheça um pouco mais do porquê do canal
    </string>
    <string name="about_channel_full_desc">A
        proposta do canal é mostrar, passo a passo, as mais
        diversas APIs, bibliotecas e frameworks Android para
        o desenvolvimento de aplicativos mobile com qualidade.

        \n\nO canal é uma extensão do Blog Thiengo.com.br.

        \n\nUma extensão em vídeo dos artigos que são disponibilizados
        em texto e também (alguns deles) em PDF.

        \n\nComo conteúdo também teremos a construção de alguns
        aplicativos Android por completo.

        \n\nAlguns desses conteúdos de apps completos serão em
        formato de série. Outros em formato único, tudo em
        uma única “tacada” (uma vídeo aula).

        \n\nPara sugerir novos conteúdos e também tirar dúvidas
        você pode estar entrando em contato com o Thiengo
        pelos endereços a seguir:

        \n\n<b>➙ E-mail:</b> thiengocalopsita@gmail.com

        \n\n<b>➙ Contato Blog:</b> https://www.Thiengo.com.br/contato

        \n\nÉ isso.

        \n\nAbraço.
    </string>


    <!-- BooksFragment -->
    <string name="books_content_title">
        Conheça meus livros
    </string>
    <string name="books_toast_alert">
        É preciso ao menos um navegador Web para abrir a
        página do livro \"%s\".
    </string>


    <!-- CoursesFragment -->
    <string name="courses_content_title">
        Conheça meus cursos em vídeo
    </string>
    <string name="complement_amount_videos">
        🎥 %d vídeo aulas
    </string>
    <string name="course_toast_alert">
        É preciso um navegador Web para abrir a página do
        curso \"%s\".
    </string>


    <!-- BusinessContactFragment -->
    <string name="business_contacts_content_title">
        Quer entrar em contato com o Grupo 5?
    </string>
    <string name="business_contacts_desc">
        Abaixo nosso email !

    </string>
    <string name="business_contact_toast_alert">
        É preciso o aplicativo \"%s\" para poder entrar em
        contato pelo \"%s\".
    </string>


    <!-- UtilNotification -->
    <string name="notification_verbose_name">
        🎬 Vídeo novo no canal
    </string>
    <string name="notification_verbose_description">
        Notificação de novos vídeos de desenvolvimento
        Android que são liberados no canal YouTube
        Vinícius Thiengo.
    </string>

    <!-- menu bottom bar -->
    <string name="menu_about">Sobre</string>
    <string name="menu_avaliacoes">Avaliações</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_filmes">Filmes</string>
    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_logoff">Logoff</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_youtube">YouTube</string>

    <!-- buttons -->
    <string name="btn_close">Fechar</string>
    <string name="btn_exit">Sair</string>

    <!-- dialogs -->
    <string name="exit_title">Deseja realmente sair?</string>
    <string name="exit_text">Clique em SAIR, para encerrar a sessão atual, ou em CANCELAR para fechar este diálogo.</string>
    <string name="exit_confirmed">Logoff realizado com sucesso!</string>

    <!-- titles activity -->
    <string name="title_activity_categoria">Categorias</string>
    <string name="title_activity_categoria_detalhe">Detalhes Categoria</string>
    <string name="btn_categoria">Categoria</string>
    <string name="api_request_failed">Failure on fetching value from API</string>

</resources>
