<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_cropped"
    tools:context=".pack.activity.LoginEmailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="340dp"
        android:layout_height="600dp"
        android:background="@drawable/background_overlay_large"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_overlay_margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_overlay_margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp"/>
        <ImageView
            android:id="@+id/login_lost_password_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@drawable/ic_action_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/closing_overlay_button"/>
        <ImageView
            android:id="@+id/login_lost_password_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_man_with_question_mark"
            app:layout_constraintTop_toBottomOf="@id/login_lost_password_close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/description_man_with_question_mark" />
        <LinearLayout
            android:id="@+id/login_lost_password_form"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/login_lost_password_image"
            app:layout_constraintEnd_toEndOf="@id/guide_overlay_margin_end"
            app:layout_constraintStart_toStartOf="@id/guide_overlay_margin_start"
            app:layout_constraintBottom_toTopOf="@id/login_lost_password_submit_button">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_lost_password_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/login_lost_password_instructions"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_lost_password_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/ic_action_email"
                app:endIconMode="clear_text"
                android:imeOptions="actionDone"
                android:hint="@string/label_email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_lost_password_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:autofillHints="@string/label_email"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/login_lost_password_submit_button"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/login_lost_password_form"
            app:layout_constraintStart_toStartOf="@id/guide_overlay_margin_start"
            app:layout_constraintEnd_toEndOf="@id/guide_overlay_margin_end"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/submit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>